fixed jumping list items in champ view

--- a/frontend/src/components/cards/competitorListCard/_competitorListCard.scss
+++ b/frontend/src/components/cards/competitorListCard/_competitorListCard.scss
@@ -29,11 +29,6 @@
     background: rgba(0, 0, 0, 0.06);
   }
 
-  // Adds spacing between consecutive cards.
-  & + .competitor-list-card {
-    margin-top: 2px;
-  }
-
   // Highlight animation for newly added competitors.
   &__highlight {
     animation: highlightFade 1.5s ease-out forwards;
