--- a/frontend/src/page/Championship/_championship.scss
+++ b/frontend/src/page/Championship/_championship.scss
@@ -12,6 +12,7 @@
   width: 100%;
   @include mixins.flexbox-column;
   padding-bottom: 80px;
+  gap: 2px;
 }
 
 // SeriesPicker overrides for Championship context.
